; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_aclchk.c_pg_largeobject_aclcheck_snapshot.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_aclchk.c_pg_largeobject_aclcheck_snapshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACLMASK_ANY = common dso_local global i32 0, align 4
@ACLCHECK_OK = common dso_local global i32 0, align 4
@ACLCHECK_NO_PRIV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pg_largeobject_aclcheck_snapshot(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = load i32, i32* @ACLMASK_ANY, align 4
  %14 = load i32, i32* %9, align 4
  %15 = call i64 @pg_largeobject_aclmask_snapshot(i32 %10, i32 %11, i32 %12, i32 %13, i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i32, i32* @ACLCHECK_OK, align 4
  store i32 %18, i32* %5, align 4
  br label %21

19:                                               ; preds = %4
  %20 = load i32, i32* @ACLCHECK_NO_PRIV, align 4
  store i32 %20, i32* %5, align 4
  br label %21

21:                                               ; preds = %19, %17
  %22 = load i32, i32* %5, align 4
  ret i32 %22
}

declare dso_local i64 @pg_largeobject_aclmask_snapshot(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
